Read Closure Library deps from goog.deps directly

--- a/src/css/styles.styl
+++ b/src/css/styles.styl
@@ -11,6 +11,7 @@ code, .code, pre
   font-size: 12px
   background: #efefef
   padding 2px 3px
+  border-radius 0.125rem
 pre
   padding: 1rem
   code
